--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
+    "cypress": "cypress open"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
     "@types/node": "18.14.5",
@@ -18,5 +26,24 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/cypress": "^1.1.3",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/testing-library__react": "^10.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "cypress": "^12.7.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jest-dom": "^4.0.3",
+    "husky": "^8.0.3",
+    "jest": "^29.4.3",
+    "jest-dom": "^4.0.0",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
+    "react-testing-library": "^8.0.1",
+    "ts-node": "^10.9.1"
   }
+
 }
