--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "husky": "^8.0.3",
     "jest": "^29.4.3",
     "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^29.4.3",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "react-testing-library": "^8.0.1",
     "ts-node": "^10.9.1"
   }
-
 }
